--- a/src/main-style.scss
+++ b/src/main-style.scss
@@ -8,7 +8,7 @@
 // Set your brand colors
 $purple: rgb(159, 104, 235);
 $light-grey: #f5f5f5;
-$dark: rbg(22, 28, 41);
+$dark: rgb(22, 28, 41);
 
 $green: #00cc86;
 $light-green: #bafacd;
