--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -5,8 +5,13 @@
             <h1>Income</h1>
 
             <div class="budget-item">
-            <app-budget-item-card [isIncome]="true" style="margin-bottom: 20px"></app-budget-item-card>
-            <app-budget-item-card [isIncome]="true" style="margin-bottom: 20px"></app-budget-item-card>
+                <div *ngFor="let item of budgetItems">
+                    <app-budget-item-card
+                    *ngIf="item.amount >= 0" 
+                    [item]="item"
+                    style="display: block; margin-bottom: 20px"
+                    ></app-budget-item-card>
+                </div>
             </div>
         </div>
 
@@ -14,8 +19,13 @@
             <h1>Expense</h1>
 
             <div class="budget-item">
-            <app-budget-item-card [isIncome]="false" style="margin-bottom: 20px"></app-budget-item-card>
-            <app-budget-item-card [isIncome]="false" style="margin-bottom: 20px"></app-budget-item-card>
+                <div *ngFor="let item of budgetItems">
+                    <app-budget-item-card
+                    *ngIf="item.amount < 0" 
+                    [item]="item"
+                    style="display: block; margin-bottom: 20px"
+                    ></app-budget-item-card>
+                </div>
             </div>
         </div>
 
