--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <section class="total-budget-section">
-    <h2 [ngClass]="{ 'red': totalBudget < 0, 'green': totalBudget > 0}">{{ totalBudget }}</h2>
+    <h2 [ngClass]="{ 'red': totalBudget < 0, 'green': totalBudget > 0}">{{ totalBudget }}€</h2>
 </section>
 
 <section class="add-item-section">
